// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match snapshot when passed data for people 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    card={
        Object {
            "info": Object {
              "homePop": "200000",
              "homeworld": "Tatooine",
              "species": "Human",
            },
            "name": "Darth Vader",
          }
    }
    toggleTarget={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt="target"
          className="target-img"
          id="displayTarget"
          src="bullseye.svg"
/>,
        <h2>
          Darth Vader
</h2>,
        <hr />,
        Array [
          <h4>
            <span>
                        homeworld
                        :
            </span>
             
            Tatooine
</h4>,
          <h4>
            <span>
                        species
                        :
            </span>
             
            Human
</h4>,
          <h4>
            <span>
                        homePop
                        :
            </span>
             
            200000
</h4>,
        ],
      ],
      "className": "cards clickable",
      "id": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "target",
          "className": "target-img",
          "id": "displayTarget",
          "src": "bullseye.svg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Darth Vader",
        },
        "ref": null,
        "rendered": "Darth Vader",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              homeworld
              :
</span>,
            " ",
            "Tatooine",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "homeworld",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "homeworld",
              ":",
            ],
            "type": "span",
          },
          " ",
          "Tatooine",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              species
              :
</span>,
            " ",
            "Human",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "species",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "species",
              ":",
            ],
            "type": "span",
          },
          " ",
          "Human",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              homePop
              :
</span>,
            " ",
            "200000",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "homePop",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "homePop",
              ":",
            ],
            "type": "span",
          },
          " ",
          "200000",
        ],
        "type": "h4",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt="target"
            className="target-img"
            id="displayTarget"
            src="bullseye.svg"
/>,
          <h2>
            Darth Vader
</h2>,
          <hr />,
          Array [
            <h4>
              <span>
                            homeworld
                            :
              </span>
               
              Tatooine
</h4>,
            <h4>
              <span>
                            species
                            :
              </span>
               
              Human
</h4>,
            <h4>
              <span>
                            homePop
                            :
              </span>
               
              200000
</h4>,
          ],
        ],
        "className": "cards clickable",
        "id": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "target",
            "className": "target-img",
            "id": "displayTarget",
            "src": "bullseye.svg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Darth Vader",
          },
          "ref": null,
          "rendered": "Darth Vader",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                homeworld
                :
</span>,
              " ",
              "Tatooine",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "homeworld",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "homeworld",
                ":",
              ],
              "type": "span",
            },
            " ",
            "Tatooine",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                species
                :
</span>,
              " ",
              "Human",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "species",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "species",
                ":",
              ],
              "type": "span",
            },
            " ",
            "Human",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                homePop
                :
</span>,
              " ",
              "200000",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "homePop",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "homePop",
                ":",
              ],
              "type": "span",
            },
            " ",
            "200000",
          ],
          "type": "h4",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match snapshot when passed data for planets 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    card={
        Object {
            "info": Object {
              "climate": "temperate",
              "population": "2000000000",
              "residents": "Leia Organa, Bail Prestor Organa, Raymus Antilles",
              "terrain": "grasslands, mountains",
            },
            "name": "Alderaan",
          }
    }
    toggleTarget={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt="target"
          className="target-img"
          id="displayTarget"
          src="bullseye.svg"
/>,
        <h2>
          Alderaan
</h2>,
        <hr />,
        Array [
          <h4>
            <span>
                        terrain
                        :
            </span>
             
            grasslands, mountains
</h4>,
          <h4>
            <span>
                        population
                        :
            </span>
             
            2000000000
</h4>,
          <h4>
            <span>
                        climate
                        :
            </span>
             
            temperate
</h4>,
          <h4>
            <span>
                        residents
                        :
            </span>
             
            Leia Organa, Bail Prestor Organa, Raymus Antilles
</h4>,
        ],
      ],
      "className": "cards clickable",
      "id": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "target",
          "className": "target-img",
          "id": "displayTarget",
          "src": "bullseye.svg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Alderaan",
        },
        "ref": null,
        "rendered": "Alderaan",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              terrain
              :
</span>,
            " ",
            "grasslands, mountains",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "terrain",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "terrain",
              ":",
            ],
            "type": "span",
          },
          " ",
          "grasslands, mountains",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              population
              :
</span>,
            " ",
            "2000000000",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "population",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "population",
              ":",
            ],
            "type": "span",
          },
          " ",
          "2000000000",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              climate
              :
</span>,
            " ",
            "temperate",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "climate",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "climate",
              ":",
            ],
            "type": "span",
          },
          " ",
          "temperate",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              residents
              :
</span>,
            " ",
            "Leia Organa, Bail Prestor Organa, Raymus Antilles",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "residents",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "residents",
              ":",
            ],
            "type": "span",
          },
          " ",
          "Leia Organa, Bail Prestor Organa, Raymus Antilles",
        ],
        "type": "h4",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt="target"
            className="target-img"
            id="displayTarget"
            src="bullseye.svg"
/>,
          <h2>
            Alderaan
</h2>,
          <hr />,
          Array [
            <h4>
              <span>
                            terrain
                            :
              </span>
               
              grasslands, mountains
</h4>,
            <h4>
              <span>
                            population
                            :
              </span>
               
              2000000000
</h4>,
            <h4>
              <span>
                            climate
                            :
              </span>
               
              temperate
</h4>,
            <h4>
              <span>
                            residents
                            :
              </span>
               
              Leia Organa, Bail Prestor Organa, Raymus Antilles
</h4>,
          ],
        ],
        "className": "cards clickable",
        "id": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "target",
            "className": "target-img",
            "id": "displayTarget",
            "src": "bullseye.svg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Alderaan",
          },
          "ref": null,
          "rendered": "Alderaan",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                terrain
                :
</span>,
              " ",
              "grasslands, mountains",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "terrain",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "terrain",
                ":",
              ],
              "type": "span",
            },
            " ",
            "grasslands, mountains",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                population
                :
</span>,
              " ",
              "2000000000",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "population",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "population",
                ":",
              ],
              "type": "span",
            },
            " ",
            "2000000000",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                climate
                :
</span>,
              " ",
              "temperate",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "climate",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "climate",
                ":",
              ],
              "type": "span",
            },
            " ",
            "temperate",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                residents
                :
</span>,
              " ",
              "Leia Organa, Bail Prestor Organa, Raymus Antilles",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "residents",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "residents",
                ":",
              ],
              "type": "span",
            },
            " ",
            "Leia Organa, Bail Prestor Organa, Raymus Antilles",
          ],
          "type": "h4",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match snapshot when passed data for vehicles 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    card={
        Object {
            "info": Object {
              "model": "Digger Crawler",
              "passengers": "30",
              "vehicleClass": "wheeled",
            },
            "name": "Sand Crawler",
          }
    }
    toggleTarget={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt="target"
          className="target-img"
          id="noTargetDisplay"
          src="bullseye.svg"
/>,
        <h2>
          Sand Crawler
</h2>,
        <hr />,
        Array [
          <h4>
            <span>
                        model
                        :
            </span>
             
            Digger Crawler
</h4>,
          <h4>
            <span>
                        passengers
                        :
            </span>
             
            30
</h4>,
          <h4>
            <span>
                        vehicleClass
                        :
            </span>
             
            wheeled
</h4>,
        ],
      ],
      "className": "cards notClickable",
      "id": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "target",
          "className": "target-img",
          "id": "noTargetDisplay",
          "src": "bullseye.svg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Sand Crawler",
        },
        "ref": null,
        "rendered": "Sand Crawler",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              model
              :
</span>,
            " ",
            "Digger Crawler",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "model",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "model",
              ":",
            ],
            "type": "span",
          },
          " ",
          "Digger Crawler",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              passengers
              :
</span>,
            " ",
            "30",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "passengers",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "passengers",
              ":",
            ],
            "type": "span",
          },
          " ",
          "30",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span>
              vehicleClass
              :
</span>,
            " ",
            "wheeled",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "vehicleClass",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "vehicleClass",
              ":",
            ],
            "type": "span",
          },
          " ",
          "wheeled",
        ],
        "type": "h4",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt="target"
            className="target-img"
            id="noTargetDisplay"
            src="bullseye.svg"
/>,
          <h2>
            Sand Crawler
</h2>,
          <hr />,
          Array [
            <h4>
              <span>
                            model
                            :
              </span>
               
              Digger Crawler
</h4>,
            <h4>
              <span>
                            passengers
                            :
              </span>
               
              30
</h4>,
            <h4>
              <span>
                            vehicleClass
                            :
              </span>
               
              wheeled
</h4>,
          ],
        ],
        "className": "cards notClickable",
        "id": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "target",
            "className": "target-img",
            "id": "noTargetDisplay",
            "src": "bullseye.svg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sand Crawler",
          },
          "ref": null,
          "rendered": "Sand Crawler",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                model
                :
</span>,
              " ",
              "Digger Crawler",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "model",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "model",
                ":",
              ],
              "type": "span",
            },
            " ",
            "Digger Crawler",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                passengers
                :
</span>,
              " ",
              "30",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "passengers",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "passengers",
                ":",
              ],
              "type": "span",
            },
            " ",
            "30",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span>
                vehicleClass
                :
</span>,
              " ",
              "wheeled",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "vehicleClass",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "vehicleClass",
                ":",
              ],
              "type": "span",
            },
            " ",
            "wheeled",
          ],
          "type": "h4",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
